# my-android-app

.github/workflows/: build-apk.yml
ccicVgL9wFGk60peXyOp-master-4168c607bdf74744eb4dbe8079cd114ef8e5a32c/: BUILD_GUIDE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  TODO.md  build_error_report.md  gradle.properties  gradlew  local.properties  settings.gradle
ccicVgL9wFGk60peXyOp-master-4168c607bdf74744eb4dbe8079cd114ef8e5a32c/app/: build.gradle
ccicVgL9wFGk60peXyOp-master-4168c607bdf74744eb4dbe8079cd114ef8e5a32c/app/src/main/: AndroidManifest.xml
ccicVgL9wFGk60peXyOp-master-4168c607bdf74744eb4dbe8079cd114ef8e5a32c/app/src/main/cpp/: jni_bridge.cpp  native-lib.cpp  tishou_core.cpp  tishou_core.h  types.h
ccicVgL9wFGk60peXyOp-master-4168c607bdf74744eb4dbe8079cd114ef8e5a32c/app/src/main/res/drawable/: badge_success.xml  floating_menu_background.xml  ic_about.xml  ic_arrow_right.xml  ic_launcher_foreground.xml  ic_log.xml  ic_notification.xml  ic_rule.xml  ic_settings.xml  ic_stats.xml  ic_stop.xml  ic_time.xml  note_background.xml  splash_background.xml
ccicVgL9wFGk60peXyOp-master-4168c607bdf74744eb4dbe8079cd114ef8e5a32c/app/src/main/res/layout/: activity_log.xml  activity_main.xml  activity_permission_guide.xml  activity_rule_config.xml  activity_settings.xml  activity_splash.xml  activity_stats.xml  dialog_edit_rule.xml  floating_menu.xml  item_log.xml  item_permission_guide.xml  item_rule.xml
ccicVgL9wFGk60peXyOp-master-4168c607bdf74744eb4dbe8079cd114ef8e5a32c/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
(+27 files in other folders)
